# 2203031080132

./: .gitignore  README.md  package.json
Web_Scraper/: README.md  pyproject.toml  requirements.txt  run.sh
Web_Scraper/app/: __init__.py  config.py  main.py  models.py
Web_Scraper/app/api/: routes.py
Web_Scraper/app/frontend/: routes.py
Web_Scraper/app/frontend/static/: style.css
Web_Scraper/app/frontend/templates/: index copy.html  index.html
Web_Scraper/app/scraper/: __init__.py  base.py  js_scraper.py  static_scraper.py  utils.py
Web_Scraper/app/services/: scraping_service.py
Web_Scraper/web_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: package-lock.json  server.js
backend/Logging_Middleware/: logger.js
backend/config/: db.js
backend/controller/: urlController.js
backend/models/: url.js
backend/routes/: urlRoutes.js
backend/services/: urlServices.js
book_manager/backend/: index.js  package-lock.json  package.json
book_manager/backend/routes/: book.js
book_manager/fronted/: package-lock.json  package.json
book_manager/fronted/src/: App.jsx
book_manager/fronted/src/components/: BookManger.jsx
task_pilot/backend/: .env  index.js  package-lock.json
task_pilot/backend/models/: Task.js
task_pilot/frontend/src/component/: TaskManager.jsx
