[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraper"
version = "1.0.0"
description = "Advanced web scraper with JS rendering and interaction capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.1",
    "selectolax==0.3.16",
    "playwright==1.40.0",
    "jinja2==3.1.2",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "python-dateutil==2.8.2",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "validators==0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/web-scraper"

[tool.setuptools]
packages = ["app", "app.scraper", "app.api", "app.frontend", "app.services"]

[tool.setuptools.package-dir]
app = "app"